--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <h1>Agentic AI-Based Hybrid Solution for TSP</h1>
     <p>Project presentation hosted using GitHub Pages.</p>
 
-    <iframe src="presentation.pdf" width="100%" height="700px"></iframe>
+    <iframe src="pbl2026.pdf" width="100%" height="700px"></iframe>
 </body>
 </html>
